--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression2": "^1.4.0"
   }
 }
